text wrap fix

--- a/src/main/resources/main.css
+++ b/src/main/resources/main.css
@@ -16,5 +16,8 @@
 .help-header {
     -fx-font-size: 20px;
     -fx-font-weight: bold;
+}
+
+.label {
     -fx-wrap-text: true;
 }
